Fix contact icon section on smaller breakpoints

--- a/_modules/_contact/_contact.scss
+++ b/_modules/_contact/_contact.scss
@@ -1,3 +1,10 @@
+.contact__icon-section {
+    @include hill-device-max('small') {
+        display: block;
+        margin-bottom: $hill-layout-space;
+    }
+}
+
 .newsletter {
     position: relative;
     display: inline;
